# report-for-me

./: .gitignore  PRD.md  SS.txt  functional_flow.md  next.config.ts  package.json  pnpm-lock.yaml  roadmap.md  tsconfig.json
.corsor/rules/: 000-project-context.mdc  100-frontend-style.mdc
.cursor/rules/: 000-project-context.mdc  200-backend-python.mdc  300-history-logging.mdc  400-db-policy.mdc
app/: error.tsx  global-error.tsx  globals.css  home-client.tsx  layout.tsx  not-found.tsx  page.tsx
app/(auth)/: layout.tsx
app/(dashboard)/: layout.tsx
app/app/: page.tsx
app/dashboard/: error.tsx  layout.tsx  page.tsx
backend/: README.md  celery_app.py  pyproject.toml  requirements.txt  run.bat  run.sh
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: reports.py
backend/app/services/: crawler.py  report_generator.py
backend/app/services/llm/: provider.py
backend/app/tasks/: report_tasks.py
backend/app/utils/: prompts.py  sanitize.py
backend/templates/: map_base.txt  reduce_base.txt
components/common/: Footer.tsx  Header.tsx  error-display.tsx
components/dashboard/: AppDashboard.tsx
components/posts/: CtaSection.tsx  FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  SectionHeader.tsx
components/providers/: query-provider.tsx  theme-provider.tsx
docs/: FLOW.md  PRD.md  db-schema.md  tech-stack.md
hooks/: use-auth.ts  use-config.ts  use-mobile.ts  use-report-progress.ts  use-report.ts  use-reports.ts  use-toast.ts
lib/: utils.ts
supabase/: seed.sql
types/: api.ts  database.ts  report.ts
(+63 files in other folders)
