[project]
name = "report-for-me-backend"
version = "0.1.0"
description = "FastAPI + Celery + LangChain 기반 리포트 생성 백엔드"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=1.0.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

